# lazymole

./: CMakeLists.txt  README.md  main.cpp
CMakeModules/: FindYamlCpp.cmake
Core/: CMakeLists.txt  LazyMole.h
Examples/Example1/: config.yaml
Examples/Example2/: config.yaml
Examples/Example3/: config.yaml
Fields/: CMakeLists.txt  CellField.h  Field.h
Geometry/: CMakeLists.txt  CartesianGrid.cpp  CartesianGrid.h  Grid.h  Point.h  Vector.h
Input/: CMakeLists.txt  Input.cpp  Input.h
